# models/user.go
@@ -252,4 +252,12 @@ type (
 		AvailableBalance       string  `json:"availableBalance"`
 		ARNumber               string  `json:"arNumber"`
 	}
+	// models/another_try.go
+
+	// AnotherTry represents the structure of the request body
+	AnotherTrys struct {
+		ID       uint   `json:"id"`
+		Username string `json:"username"`
+		Password string `json:"password"`
+	}
 )
